deployments/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: authz-grpc-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "*"
    port:
      name: grpc
      number: 443
      protocol: HTTP      
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ms-ingress-grpc
spec:
  hosts:
    - "*"
  gateways:
    - authz-grpc-gateway
  http:
    - match:
      - uri:
          prefix: /pb.Authz
      route:
      - destination:
          host: authz
          port:
            number: 8000
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: authz-http-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authz-ingress-http
spec:
  hosts:
  - "*"
  gateways:
  - authz-http-gateway
  http:
  - match:
    - uri:
        prefix: /api/v1/authz/
    rewrite:
      uri: /
    route:
      - destination:
          host: authz
          port:
            number: 80
